# HaskAnything

./: .gitignore  CNAME  LICENSE  Makefile  README.md  article-types.sh  circle.yml  copy-exe.bat  documentation.html  filter.html  get-metadata.sh  hask-anything.cabal  index.html  presentation-a-taste-of-haskell-part-1.md  stack.yaml  testing
.circleci/: config.yml
app/: copy-and-run-site.sh  documentation.md  index.html  site.hs  temptest.hs
app/css/: default.css
app/js/: conferences.js  datepickers.js  filter-helpers.js  generate-file-preview.js  getbaseroot.js  github-login.js  github-lookup.js  json.js  metadata.js  paper-lookup.js  pull-request.js  querystring.js  reddit-lookup.js  series-types.js  snippet-lookup.js  stack-exchange-lookup.js
app/permissions/: permission-file-beerend-lauwers-test.md
app/templates/: categories-overview.html  categories.html  content-data.html  content.html  default.html  filter.html  libraries.html  permissions.html  submit.html  tag.html  tags.html  testing.html
categories/: article.html  package.html  paper.html  presentation.html  reddit-post.html  series.html
content/article/: 2018-haskell-survey-results.html  ballast-a-library-for-talking-to-shipwire.html  beginners-guide-to-megaparsec.html  compiling-lisp-to-javascript-from-scratch-in-350-loc.html  data-proxy.html  expressive-types-not-oppressive-types.html  fullstack-haskell-reflex-and-servant.html  fun-with-hint.html  haskellers-com.html  introducing-hask-anything.html  introduction-to-the-indexed-privilege-monad.html  lazy-io-and-graphs-winterfell-to-kings-landing.html  lenses-embody-products-prisms-embody-sums.html  memoization-in-haskell.html  monads-made-difficult.html  natural-transformations-in-servant.html  nginx-haskell-module-labeled-media-routing-example.html  nix-and-haskell-in-production.html  opengl-on-froid.html  safe-prelude-a-thought-experiment.html  speeding-up-a-distributed-computation-in-haskell.html  the-design-and-use-of-quickcheck.html  type-level-functions-using-closed-type-families.html
content/package/: pandoc.html
content/paper/: 1ML-core-and-modules-united.html  paper-adventures-in-three-monads.html  paper-gadts-meet-their-match.html  theorem-proving-for-all.html
content/presentation/: adventure-with-types-in-haskell-pt1.html  adventure-with-types-in-haskell-pt2.html  adventure-with-types-in-haskell-pt3.html  adventure-with-types-in-haskell-pt4.html  autobahn-using-gentic-algorithms-to-infer-strictness-annotations.html  causal-commutative-arrows-revisited.html  desugaring-haskells-do-notation-into-applicative-operations.html  discrimination-is-wrong-improving-productivity.html  distributed-programming-in-haskell.html  experience-report-developing-high-perf-http-server-in-haskell.html  fitspec-refining-property-sets-for-functional-testing.html  free-delivery.html  frp-browser-programming-with-reflex.html  functional-reactive-programming-refactored.html  high-perf-client-side-web-apps-through-edsls.html  how-to-twist-pointers-without-breaking-them.html  pattern-synonyms.html  presentation--advanced-functional-programming-in-industry.html  presentation--analyzing-programs-with-z3.html  presentation--applications-of-datatype-generic-programming-in-haskell.html  presentation--clutching-a-grip-on-autosar-using-haskell.html  presentation--dynamic-programming-at-ease-with-grammars-algebras-products.html  presentation--eins-nach-dem-anderen-konfiguration-mit-modellbasierten-abhängigkeiten.html  presentation--elm-im-produktiven-einsatz.html  presentation--fltkhs-easy-native-guis-in-haskell-today.html  presentation--fun-with-GHCJSi.html  presentation--functional-programming-and-the-web-frontend-development-in-purescript.html  presentation--functional-reactive-programming.html  presentation--fundamentals-of-dependent-type-theory.html  presentation--improving-type-error-localization-for-languages-with-type-inference.html  presentation--keeping-front-end-development-simple-with-react.html  presentation--liquid-types-for-haskell.html  presentation--lvars-lattice-based-data-structures-for-deterministic-parallel-and-distributed-programming.html  presentation--mit-monaden-die-zukunft-im-blick.html  presentation--praktische-erfahrungen-mit-gpu-programmierung-in-haskell.html  (+25 more)
css/: default.css
js/: article.js  conferences.js  dropdowns.js  generate-file-preview.js  presentation-lookup.js  pull-request.js  series-item-picker.js  series-lookup.js  snippet-lookup.js  stack-exchange-lookup.js
json/: article-types.json  authors.json  categories.json  conferences.json  libraries.json  permission-files.json  series-types.json  tags.json
libraries/: FComp.html  HarmTrace.html  MemoTrie.html  Obsidian.html  Yampa.html  accelerate.html  aeson.html  async.html  ballast.html  blaze-react.html  cuda.html  discrimination.html  fitspec.html  froid.html  gdiff.html  haskell-opencv.html  haskore.html  hint.html  inline-c.html  lens.html  liquidhaskell.html  lvish.html  megaparsec.html  memoize.html  mmorph.html  nginx-haskell-module.html  oml.html  raaz.html  reactive-banana.html  reflex-dom.html  reflex.html  safe-prelude.html  servant.html  simple-poll.html  stripe-haskell.html  template-haskell.html  threepenny-gui.html  verdict.html  warp.html
tags/: Algebraic Datatypes (ADTs).html  Alternative Prelude.html  Android.html  Applicative Functors.html  Arrows.html  Attribute Grammars.html  Benchmark.html  Best Practices.html  Category Theory.html  Cloud Haskell.html  Compilers.html  Computer Vision.html  Contravariance.html  Core.html  Cryptography.html  DSL.html  Dependent Types.html  Distributed Computing.html  Distributed Programming.html  Dynamic Programming.html  Dynamic evaluation.html  Elm.html  Embedded DSL.html  Final Encoding.html  Frege.html  Functional Reactive Programming (FRP).html  Fuzzing.html  GHC.html  GHCJS.html  GPU Programming.html  Generic Programming.html  Graphs.html  Haskell Community.html  Haskell In Production.html  Idris.html  Indexed Monads.html  Inference.html  Interpreter.html  LVars.html  Library Design.html  (+45 more)
ui/submit/: article.html  (+9 more)
(+202 files in other folders)
