name:                hask-anything
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hask-anything#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HaskAnything.Internal.Content
                     , HaskAnything.Internal.Tags
                     , HaskAnything.Internal.Facet
                     , HaskAnything.Internal.JSON
                     , HaskAnything.Internal.Extra
                     , HaskAnything.Internal.Field
                     , HaskAnything.Internal.Po.Parse
                     , HaskAnything.Internal.Po
  build-depends:       base >= 4.7 && < 5
                     , hakyll == 4.7.4.0
                     , blaze-html
                     , containers
                     , aeson == 0.8.0.2
                     , bytestring
                     , parsec
                     , mtl
                     , text
                     , hackage-db
                     , MissingH
  default-language:    Haskell2010

executable hask-anything-exe
  hs-source-dirs:      app
  main-is:             site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hask-anything
                     , hakyll == 4.7.4.0
                     , text
                     , split
                     , filepath
                     , aeson
  default-language:    Haskell2010

test-suite hask-anything-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hask-anything
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hask-anything
