name:                hask-anything
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hask-anything#readme
license:             BSD3
license-file:        LICENSE
author:              Beerend Lauwers
maintainer:          beerendlawers@gmail.com
copyright:           2016 Beerend Lauwers
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HaskAnything.Internal.Content
                     , HaskAnything.Internal.Context
                     , HaskAnything.Internal.Tags
                     , HaskAnything.Internal.Facet
                     , HaskAnything.Internal.JSON
                     , HaskAnything.Internal.Extra
                     , HaskAnything.Internal.Field
                     , HaskAnything.Internal.Field.Video
                     , HaskAnything.Internal.Po.Parse
                     , HaskAnything.Internal.Po
  build-depends:       base >= 4.7 && < 5
                     , hakyll == 4.8.3.2
                     , blaze-html
                     , containers
                     , aeson
                     , bytestring
                     , parsec
                     , mtl
                     , text
                     , hackage-db
                     , unordered-containers
                     , MissingH
                     , filepath
                     , split
  default-language:    Haskell2010

executable hask-anything-exe
  hs-source-dirs:      app
  main-is:             site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hask-anything
                     , hakyll == 4.8.3.2
                     , text
                     , filepath
                     , aeson
                     , containers
                     , bytestring
                     , MissingH
  default-language:    Haskell2010

test-suite hask-anything-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hask-anything
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hask-anything
