name:                hask-anything
version:             0.1.0.0
synopsis:            Builds the static site that comprises HaskAnything.com with Hakyll.
description:         Please see README.md
homepage:            https://github.com/beerendlauwers/HaskAnything
license:             BSD3
license-file:        LICENSE
author:              Beerend Lauwers
maintainer:          beerendlauwers@gmail.com
copyright:           None
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HaskAnything.Internal.Content
                     , HaskAnything.Internal.Context
                     , HaskAnything.Internal.Tags
                     , HaskAnything.Internal.Facet
                     , HaskAnything.Internal.JSON
                     , HaskAnything.Internal.Extra
                     , HaskAnything.Internal.Field
                     , HaskAnything.Internal.Field.Video
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , blaze-html
                     , containers
                     , aeson
                     , bytestring
                     , parsec
                     , mtl
                     , text
                     , hackage-db
                     , unordered-containers
                     , MissingH
                     , filepath
                     , split
                     , utf8-string
  default-language:    Haskell2010

executable hask-anything-exe
  hs-source-dirs:      app
  main-is:             site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hask-anything
                     , hakyll
                     , text
                     , filepath
                     , aeson
                     , containers
                     , bytestring
                     , MissingH
                     , utf8-string
                     , optparse-applicative
  default-language:    Haskell2010

test-suite hask-anything-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hask-anything
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hask-anything
